[tool.poetry]
name = "extract-files"
version = "0.1.0"
description = ""
authors = ["Ramon Voges <r.voges@dnb.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
